k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: car-rental-ns
  labels:
    app: car-rental
