k8s/car-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-service
  namespace: car-rental-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: car-service
  template:
    metadata:
      labels:
        app: car-service
    spec:
      affinity: 
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - car-service
      containers:
        - name: car-service-app
          image: vexim/car-service:latest
          imagePullPolicy: Always 
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"
              memory: 512Mi
            requests:
              cpu: "100m"
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: car-service-service
  namespace: car-rental-ns
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: car-service
