k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: car-rental-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-app
          image: frontend_app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "500m"
              memory: 256Mi
            requests:
              cpu: "100m"
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: car-rental-ns
spec:
  type: ClusterIP # Ingress i tak wystawi to na świat, więc wewnątrz klastra wystarczy ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
