k8s/rental-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rental-service
  namespace: car-rental-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rental-service
  template:
    metadata:
      labels:
        app: rental-service
    spec:
      containers:
        - name: rental-service-app
          image: rental_service_app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"
              memory: 512Mi
            requests:
              cpu: "100m"
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rental-service-service
  namespace: car-rental-ns
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: rental-service
