k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-rental-ingress
  namespace: car-rental-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: car-rental.local # Adres mapowany w /etc/hosts
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api/cars
            pathType: Prefix
            backend:
              service:
                name: car-service-service
                port:
                  number: 8000
          - path: /api/rentals
            pathType: Prefix
            backend:
              service:
                name: rental-service-service
                port:
                  number: 8000
