k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
  namespace: car-rental-ns
spec:
  podSelector:
    matchLabels:
      app: mongodb # Dotyczy bazy danych
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: car-service # Zezwalaj z car-service
        - podSelector:
            matchLabels:
              app: rental-service # Zezwalaj z rental-service
      ports:
        - protocol: TCP
          port: 27017
